deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: merkeb-music-service
  namespace: merkeb-music
spec:
  selector:
    app: merkeb-music
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
