deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merkeb-music-ingress
  namespace: merkeb-music
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  rules:
    - host: merkeb-music.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: merkeb-music-service
                port:
                  number: 80
